...

                        <!-- A열 -->
                        <TableRow>

                            <TextView
                                style="@style/SeatTextStyleB"
                                android:text="A1" />

                            <TextView
                                style="@style/SeatTextStyleB"
                                android:text="A2" />

                            <TextView
                                style="@style/SeatTextStyleB"
                                android:text="A3" />

                            <TextView
                                style="@style/SeatTextStyleB"
                                android:text="A4" />
                        </TableRow>

                        <!-- B열 -->
                        <TableRow>

                            <TextView
                                style="@style/SeatTextStyleB"
                                android:text="B1" />

                            <TextView
                                style="@style/SeatTextStyleB"
                                android:text="B2" />

                            <TextView
                                style="@style/SeatTextStyleB"
                                android:text="B3" />

                            <TextView
                                style="@style/SeatTextStyleB"
                                android:text="B4" />
                        </TableRow>

                        <!-- C열 -->
                        <TableRow>

                            <TextView
                                style="@style/SeatTextStyleS"
                                android:text="C1" />

                            <TextView
                                style="@style/SeatTextStyleS"
                                android:text="C2" />

                            <TextView
...

                        <!-- E열 -->
                        <TableRow>

                            <TextView
                                style="@style/SeatTextStyleA"
                                android:text="E1" />

                            <TextView
                                style="@style/SeatTextStyleA"
                                android:text="E2" />

                            <TextView
                                style="@style/SeatTextStyleA"
                                android:text="E3" />

                            <TextView
                                style="@style/SeatTextStyleA"
                                android:text="E4" />
                        </TableRow>

                    </TableLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

...
                <TextView
                    android:id="@+id/seat_movie_price"
                    style="@style/MoviePriceTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{@string/booking_seat_price(booking_status.calculateTicketPrices())}"
                    tools:text="0원" />
            </LinearLayout>

            <!-- 확인 버튼 -->
            <Button
                android:id="@+id/seat_confirm_button"
                style="@style/ButtonTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/gray_500"
                android:text="@string/booking_seat_okay"
                tools:text="확인" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

