...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textCompletedTicketCount"
            tools:text="13,000원 (현장 결제)" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
