<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="tickets"
            type="woowacourse.movie.feature.reservationList.itemModel.TicketsItemModel" />
    </data>

    <LinearLayout
        android:id="@+id/reservation_item_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{()->tickets.onClick.invoke(tickets.ticketsState)}"
        android:orientation="vertical"
        android:padding="@dimen/margin_small">

        <TextView
            android:id="@+id/screening_date_time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            tools:text="0000.00.00 | 00:00" />

        <TextView
            android:id="@+id/movie_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{tickets.ticketsState.movie.title}"
            android:textColor="@color/black"
            android:textSize="@dimen/title_small"
            android:textStyle="bold"
            tools:text="해리포터" />

    </LinearLayout>
</layout>