...
                android:id="@+id/tv_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/movie_title"
                android:text="@{movieUi.title}">

            </TextView>

            <TextView
                android:id="@+id/tv_movie_date"
...
